# Apple-Metal-Orchard

./: .gitignore  .gitmodules  CMakeLists.txt  baseline_results.md  kernels_inventory.md  requirements_lock.txt  setup_log.md
benchmarks/: README.md  orchard_bench_v0.8.py  orchard_patch_flash.py  run_epoch.sh
data/: README.md
kernel_lib/: README.md
kernel_lib/flashattn_pre_flash_rebuild_20250712_1503/: libflash_attn.dylib
orchard.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
orchard_ops/: CMakeLists.txt  README.md  enable_flash.py
orchard_ops/mps/: flash_attn.h  flash_attn.mm
runs/: 20250629-191202_ref_no_flash_mac1-100-1_bf16.power  20250629-194521_ref_no_flash_mac2-100-4_bf16.power  20250629-195037_ref_no_flash_mac2-100-5_bf16.power  20250630-185854_flash_enabled_mac1-100-1_bf16.power  20250630-190130_flash_enabled_mac1-100-1_bf16.power  20250630-190420_flash_enabled_mac1-100-2_bf16.power  20250630-190708_flash_enabled_mac1-100-3_bf16.power  20250630-192856_flash_enabled_mac2-100-1_bf16.power  20250630-194013_flash_enabled_mac2-100-4_bf16.power  20250630-194332_flash_enabled_mac2-100-5_bf16.power  README.md
runs/Baseline Runs/BASE/: baseline_results.md  quickcheck_results.md
runs/Baseline Runs/BASE/mac1/: 20250629-191845_ref_no_flash_mac1-100-2_bf16.power  20250629-192137_ref_no_flash_mac1-100-3_bf16.power  (+2 more)
runs/Baseline Runs/GPU Baseline/: gpu_baseline_results.md
runs/Baseline Runs/Power Baseline/: power_baseline_results.md
runs/Baseline/mac1/: 20250714-204923_mac1_flash-1_seq512_long.power  20250714-214355_mac1_flash-2_seq512_long.power  20250714-223453_mac1_baseline-3_seq512_long.power  20250714-223650_mac1_flash-3_seq512_long.power
runs/v1_FlashAttn/: flashattn_results.md
runs/v1_FlashAttn/mac1/: 20250630-190953_flash_enabled_mac1-100-4_bf16.power  20250630-191241_flash_enabled_mac1-100-5_bf16.power
runs/v1_FlashAttn/mac2/: 20250630-193001_flash_enabled_mac2-100-1_bf16.power  20250630-193252_flash_enabled_mac2-100-2_bf16.power  20250630-193720_flash_enabled_mac2-100-3_bf16.power
(+15 files in other folders)
